--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-webpack-plugin": "^4.0.1",
     "fetch-mock": "^9.11.0",
     "html-webpack-plugin": "^5.6.0",
+    "jes": "^0.6.1",
     "jest": "^29.7.0",
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.7.0",
@@ -80,7 +81,7 @@
     "storybook": "^7.6.10",
     "storybook-addon-react-router-v6": "^2.0.10",
     "style-loader": "^3.3.3",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "url-loader": "^4.1.1"
